إضافة قسم الشكاوي ضمن مرحلة التطوير

--- a/templates/base.html
+++ b/templates/base.html
@@ -204,6 +204,11 @@
                                 </a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link" href="/complaints/">
+                                    <i class="fas fa-exclamation-triangle"></i><span class="nav-text">الشكاوى</span>
+                                </a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link" href="/reports/list/">
                                     <i class="fas fa-chart-bar"></i><span class="nav-text">التقارير</span>
                                 </a>
